- adds overflow hidden (preventing jumping window on ios) - disables caching http-server

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,4 +14,5 @@ body {
 body {
   position: fixed;
   max-height: var(--vh);
+  overflow: hidden;
 }
